src/resolver/tests/snapshots/rusty__resolver__tests__resolve_expressions_tests__builtin_le_replacement_ast.snap
---
source: src/resolver/tests/resolve_expressions_tests.rs
expression: "generate_comparison_test(\"LE\")"
---
ReplacementAst {
    statement: BinaryExpression {
        operator: And,
        left: BinaryExpression {
            operator: And,
            left: BinaryExpression {
                operator: LessOrEqual,
                left: ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "a",
                        },
                    ),
                    base: None,
                },
                right: ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "b",
                        },
                    ),
                    base: None,
                },
            },
            right: BinaryExpression {
                operator: LessOrEqual,
                left: ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "b",
                        },
                    ),
                    base: None,
                },
                right: ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "c",
                        },
                    ),
                    base: None,
                },
            },
        },
        right: BinaryExpression {
            operator: LessOrEqual,
            left: ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "c",
                    },
                ),
                base: None,
            },
            right: ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "d",
                    },
                ),
                base: None,
            },
        },
    },
}
