src/resolver/tests/snapshots/rusty__resolver__tests__resolve_expressions_tests__string_compare_should_resolve_to_bool.snap
---
source: src/resolver/tests/resolve_expressions_tests.rs
expression: annotations.get(a_eq_b).unwrap()
---
ReplacementAst {
    statement: CallStatement {
        operator: Reference {
            name: "STRING_EQUAL",
        },
        parameters: Some(
            ExpressionList {
                expressions: [
                    ReferenceExpr {
                        kind: Member(
                            Reference {
                                name: "a",
                            },
                        ),
                        base: None,
                    },
                    ReferenceExpr {
                        kind: Member(
                            Reference {
                                name: "b",
                            },
                        ),
                        base: None,
                    },
                ],
            },
        ),
    },
}
